--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,72 @@
 	<title>Bakery</title>
 </head>
 <body>
-	<h1>Webpack Weee</h1>
-	<main>
-		<div>Some content to you guy</div>
-		<img src="./images/main_bg.png" alt="img">
-		<button>Button</button>
-		<ul>
-			<li>1 item</li>
-			<li>2 item</li>
-			<li>3 item</li>
-		</ul>
-	</main>
-</body>
-</html>
+	<header class="header">
+		<div class="container">
+			<div class="header-inner">
+				<a href="index.html" class="header-logo">Gustoso</a>
+				<nav class="nav-menu">
+					<ul class="menu-list">
+						<li class="menu-list_item">welcome</li>
+						<li class="menu-list_item">menu</li>
+						<li class="menu-list_item">reservations</li>
+						<li class="menu-list_item">news</li>
+						<li class="menu-list_item">contact</li>
+					</ul>
+				</nav>
+				<div class="solial-menu">
+					<!-- <a href="" class="social-item">
+						<svg></svg>
+					</a>
+					<a href="" class="social-item">
+						<svg></svg>
+					</a>
+					<a href="" class="social-item">
+						<svg></svg>
+					</a> -->
+				</div>
+			</div>
+		</div>
+	</header>
+	<section class="main-page">
+		<div class="container">
+			<div class="main-page_inner">
+			</div>
+			<div class="main-page_content">
+				<h1 class="main-page_title">Pastry with love</h1>
+				<h3 class="main-page_subtitle">We’re bringing you fresh ingredients every<br>
+					day in ways you can’t resist.</h3>
+					<button class="button">Our menu</button>
+				</div>
+			</div>
+		</section>
+		<main class="main">
+			<div class="container-fluid">
+				<div class="wrapper">
+					<div class="wrapper-item">
+						<h4 class="item-title">Art of cakes</h4>
+						<p class="item-subtitle">we create delicious memories</p>
+						<p class="item-text">Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed.</p>
+						
+					</div>
+					<div class="wrapper-item">
+						<div class="img-container">
+							<div class="img-item">
+								<img src="./images/item_img_1.png" alt="">
+							</div>
+							<div class="img-item">
+								<img src="./images/item_img_2.png" alt="">
+							</div>
+							<div class="img-item">
+								<img src="./images/item_img_3.png" alt="">
+							</div>
+							<div class="img-item">
+								<img src="./images/item_img_4.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+	</body>
+	</html>
