--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
 								</div>
 								<div class="slider__content wrapper__item">
 									<div class="slider__header item-header">
-										<h4 class="slider__title item-header__title">Tasty pancakes</h4>
+										<h4 class="slider__title item-header__title">Сinnabon buns</h4>
 											<p class="slider__subtitle item-header__subtitle">season favourite</p>
 											<p class="slider__text item-header__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
 											<button type="button" class="slider__button">
@@ -135,8 +135,8 @@
 									</div>
 									<div class="slider__info info-slider">
 										<span class="info-slider__text_1">ready in</span>
-										<span class="info-slider__text_2">40</span>
-										<span class="info-slider__text_3">mins</span>
+										<span class="info-slider__text_2">2</span>
+										<span class="info-slider__text_3">hours</span>
 									</div>
 								</div>
 							</div>
@@ -146,7 +146,7 @@
 								</div>
 								<div class="slider__content wrapper__item">
 									<div class="slider__header item-header">
-										<h4 class="slider__title item-header__title">Tasty pancakes</h4>
+										<h4 class="slider__title item-header__title">Сream muffins</h4>
 											<p class="slider__subtitle item-header__subtitle">season favourite</p>
 											<p class="slider__text item-header__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
 											<button type="button" class="slider__button">
@@ -156,7 +156,7 @@
 									</div>
 									<div class="slider__info info-slider">
 										<span class="info-slider__text_1">ready in</span>
-										<span class="info-slider__text_2">40</span>
+										<span class="info-slider__text_2">50</span>
 										<span class="info-slider__text_3">mins</span>
 									</div>
 								</div>
@@ -167,7 +167,7 @@
 								</div>
 								<div class="slider__content wrapper__item">
 									<div class="slider__header item-header">
-										<h4 class="slider__title item-header__title">Tasty pancakes</h4>
+										<h4 class="slider__title item-header__title">Lemon pie</h4>
 											<p class="slider__subtitle item-header__subtitle">season favourite</p>
 											<p class="slider__text item-header__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
 											<button type="button" class="slider__button">
@@ -177,16 +177,22 @@
 									</div>
 									<div class="slider__info info-slider">
 										<span class="info-slider__text_1">ready in</span>
-										<span class="info-slider__text_2">40</span>
-										<span class="info-slider__text_3">mins</span>
+										<span class="info-slider__text_2">1</span>
+										<span class="info-slider__text_3">hour</span>
 									</div>
 								</div>
 							</div>
 						</div>
+						<div class="slider__nav">
 						<div class="slider__dotts"></div>
-						<div class="slider__more more__item_next"></div>
-						<div class="slider__more more__item_prev"></div>
+							<div class="slider__nav-button nav-button_prev">
+								 <div class="swiper-button-prev"></div>
+								</div>
+							<div class="slider__nav-button nav-button_next">
+								<div class="swiper-button-next"></div>
+						</div>
 					</div>
+				</div>
 				</section>
 			</body>
-			</html>
+		</html>
