--- a/src/index.html
+++ b/src/index.html
@@ -194,5 +194,79 @@
 					</div>
 				</div>
 				</section>
+				<section class="page page__menu">
+					<div class="container-fluid">
+						<div class="page__menu_wrapper wrapper">
+							<div class="page__menu_item wrapper__item">
+								<div class="menu__itm menu__itm_header">
+									<p class="menu__itm_title">Breakfast</p>
+									<p class="menu__itm_subtitle"><sub>7</sub>am Breakfast? we’re open!</p>
+								</div>
+								<div class="menu__itm">
+									<p class="menu__itm_text1">Full breakfast</p>
+									<p class="menu__itm_text2">Duis ut tortor, et risus, vulputate pretium</p>
+									<p class="menu__itm_price dollar">12.49</p>
+								</div>
+								<div class="menu__itm">
+									<p class="menu__itm_text1">Toast & Jam</p>
+									<p class="menu__itm_text2">Suspendisse, tempus, nterdum</p>
+									<p class="menu__itm_price dollar">4.90</p>
+								</div>
+								<div class="menu__itm">
+									<p class="menu__itm_text1">Muffins</p>
+									<p class="menu__itm_text2">Fusce eget dui sodales est</p>
+									<p class="menu__itm_price dollar">3.95</p>
+								</div>
+							</div>
+							<div class="page__menu_item wrapper__item item-menu">
+								<div class="menu__card menu__card_first">
+									<div class="menu__card_content">
+										<div class="menu__card_header">
+											<span>Est.</span>
+											<span>1893</span>
+										</div>
+										<div class="menu__card_body">
+											<h4 class="item-header__title menu__card_title">Your morning Escape with Flair</h4>
+											<p class="item-header__text menu__card_text">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus incidunt. Duis leo.</p>
+										</div>
+										<div class="menu__card_footer">
+											<button class="menu__btn">read</button>
+										</div>
+									</div>
+								</div>
+								<div class="menu__card menu__card_second">
+									<div class="menu__card_content">
+										<div class="menu__card_header">
+											<span>Est.</span>
+											<span>1893</span>
+										</div>
+										<div class="menu__card_body">
+											<h4 class="item-header__title menu__card_title">Your morning Escape with Flair</h4>
+											<p class="item-header__text menu__card_text">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus incidunt. Duis leo.</p>
+										</div>
+										<div class="menu__card_footer">
+											<button class="menu__btn">read</button>
+										</div>
+									</div>
+								</div>
+								<div class="menu__card menu__card_third">
+									<div class="menu__card_content">
+										<div class="menu__card_header">
+											<span>Est.</span>
+											<span>1893</span>
+										</div>
+										<div class="menu__card_body">
+											<h4 class="item-header__title menu__card_title">Your morning Escape with Flair</h4>
+											<p class="item-header__text menu__card_text">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus incidunt. Duis leo.</p>
+										</div>
+										<div class="menu__card_footer">
+											<button class="menu__btn">read</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</body>
 		</html>
