--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header class="header">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="header__inner">
 				<a href="index.html" class="header__logo">Gustoso</a>
 				<nav class="menu">
@@ -30,16 +30,22 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="solial-menu">
-					<!-- <a href="" class="social-item">
-						<svg></svg>
+				<div class="social-menu">
+					<a href="#" class="social-menu__item item_twitter">
+						<svg>
+							<path d="M8.99997 16.9414L7.49997 12.4414L24 0.441406L0.932967 9.31241C0.932967 9.31241 -0.0750331 9.65741 0.00446695 10.2949C0.0839669 10.9324 0.907467 11.2234 0.907467 11.2234L6.26997 13.0279L8.69997 20.7589L12.813 17.1424L12.8025 17.1349L18.213 21.2839C19.6725 21.9214 20.2035 20.5939 20.2035 20.5939L24 0.441406L8.99997 16.9414Z"/>
+						</svg>
 					</a>
-					<a href="" class="social-item">
-						<svg></svg>
+					<a href="#" class="social-menu__item item_facebook">
+						<svg>
+							<path d="M22.6755 0H1.3245C0.5925 0 0 0.5925 0 1.3245V22.6755C0 23.4075 0.5925 24 1.3245 24H12.819V14.706H9.69V11.085H12.819V8.4105C12.819 5.3115 14.712 3.6255 17.478 3.6255C18.8025 3.6255 19.941 3.7215 20.2725 3.7665V7.0065H18.3525C16.8525 7.0065 16.56 7.7265 16.56 8.7765V11.0865H20.145L19.68 14.7165H16.56V24H22.6755C23.4075 24 24 23.4075 24 22.6755V1.3245C24 0.5925 23.4075 0 22.6755 0Z"/>
+						</svg>
 					</a>
-					<a href="" class="social-item">
-						<svg></svg>
-					</a> -->
+					<a href="#" class="social-menu__item item_instagram">
+						<svg>
+							<path d="M3.6 9H7.2V20.4H3.6V9ZM5.4 3.3C6.6 3.3 7.5 4.2 7.5 5.4C7.35 6.45 6.45 7.5 5.4 7.5C4.2 7.5 3.3 6.45 3.3 5.4C3.3 4.2 4.2 3.3 5.4 3.3ZM9.3 9H12.75V10.5C13.5 9.3 14.85 8.7 16.2 8.7C19.8 8.7 20.4 11.1 20.4 14.1V20.4H16.8V14.85C16.8 13.5 16.8 11.85 15 11.85C13.2 11.85 12.9 13.35 12.9 14.85V20.55H9.3V9ZM19.5 0H4.5C1.5 0 0 1.5 0 4.5V19.5C0 22.5 1.5 24 4.5 24H19.5C22.5 24 24 22.5 24 19.5V4.5C24 1.5 22.5 0 19.5 0Z"/>
+						</svg>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -268,5 +274,97 @@
 						</div>
 					</div>
 				</section>
+				<section class="page page__product" style="background-color: #f3f1e9;">
+					<div class="container-fluid">
+						<div class="page__product_header item-header">
+							<h4 class="item-header__title">The Jibarito sandwich</h4>
+							<p class="item-header__subtitle">the best sandwich you’ve ever tasted!</p>
+						</div>
+						<div class="page__product_wrapper wrapper">
+							<div class="page__product_item item-product">
+								<div class="item-product__itm">
+									<img src="./images/01.png" alt="">
+									<p class="item-product__title">Class aptent</p>
+									<p class="item-product__text">Quot alienum persecuti ut eam, nam ad 
+										atqui primis nusquam.</p>
+								</div>
+								<div class="item-product__itm">
+									<img src="./images/02.png" alt="">
+									<p class="item-product__title">Nulla eget</p>
+									<p class="item-product__text">Nullam dictum felis eu pede mollis 
+										pretium Integer tincidunt.</p>
+								</div>
+								<div class="item-product__itm">
+									<img src="./images/03.png" alt="">
+									<p class="item-product__title">Sed nibh purus</p>
+									<p class="item-product__text">Aenean eleifend tellus leo ligula, 
+										porttitor eu, consequat vitae.</p>
+								</div>
+							</div>
+							<div class="page__product_item img-product">
+								<div class="img-product__itm">
+									<img src="./images/product_01.png" alt="hamon sandwich">
+									<div class="img-product__info info-column">
+										<div class="info-column__itm">
+											<div class="info-column__content">
+												<span class="info-column__text1">prep</span>
+												<span class="info-column__text2">15</span>
+												<span class="info-column__text3">mins</span>
+											</div>
+										</div>
+										<div class="info-column__itm">
+											<div class="info-column__content">
+												<span class="info-column__text1">cook</span>
+												<span class="info-column__text2">35</span>
+												<span class="info-column__text3">mins</span>
+											</div>
+										</div>
+										<div class="info-column__itm">
+											<div class="info-column__content">
+												<span class="info-column__text1">ready in</span>
+												<span class="info-column__text2">50</span>
+												<span class="info-column__text3">mins</span>
+											</div>
+										</div>
+									</div>
+									<a href="#" class="img-product__btn">FULL RECIPE</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<footer class="footer">
+					<div class="container-fluid">
+						<div class="footer__inner">
+							<nav class="footer__nav">
+								<ul class="footer__menu menu-footer">
+									<li>
+										<a class="menu-footer__link" href="#">our menu</a>
+									</li>
+									<li>
+										<a class="menu-footer__link" href="#">gallery</a>
+									</li>
+									<li>
+										<a class="menu-footer__link" href="#">culture</a>
+									</li>
+								</ul>
+							</nav>
+							<a href="#" class="header__logo footer__logo">Gustoso</a>
+							<nav class="footer__nav">
+								<ul class="footer__menu menu-footer">
+									<li>
+										<a class="menu-footer__link" href="#">events</a>
+									</li>
+									<li>
+										<a class="menu-footer__link" href="#">catering</a>
+									</li>
+									<li>
+										<a class="menu-footer__link" href="#">visit us</a>
+									</li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</footer>
 			</body>
 		</html>
